Added custom packages

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ server/
 python-*-docs-html
 
 # Private directory
-private/*
+# private/*
 !private/README.md
 !private/snippets/README.md
 /games/
